Add editalbum and update upload page.

--- a/upload.html
+++ b/upload.html
@@ -79,11 +79,11 @@ div.table .file-row:nth-child(odd) {
 <body>
 
         <div class="container" id="container">
-                <h1>Dropzone.js</h1>
-                <h2 class="lead">Configuration Demo</h2>
+                <h1>专辑上传</h1>
+                <h2 class="lead">试用页面</h2>
 
                 <ul class="nav nav-tabs">
-                        <li class="active"><a href="#">Bootstrap theme</a></li>
+                        <li class="active"><a href="#">请点击新建专辑</a></li>
                 </ul>
 
                 <br>
